--- a/vue3_admin_template/project/package.json
+++ b/vue3_admin_template/project/package.json
@@ -22,7 +22,8 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.5",
     "element-plus": "^2.4.4",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.23.3",
